fix page layout problem

--- a/resources/assets/sass/content.scss
+++ b/resources/assets/sass/content.scss
@@ -100,10 +100,3 @@
     background-size: cover;
     overflow: hidden;
 }
-.panel-default > .panel-heading{
-  color: #f9f8f8;
-  background-color: #a9a4a4;
-}
-.panel-body{
-  background-color: #b3aaaa;
-}
